--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="AuraSync - Emotion-Aware Music Companion" />
     <meta property="og:description" content="Discover music that matches your mood with AI-powered emotion detection and Spotify integration" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://ibb.co/dw3wCG4H" />
+    <meta property="og:image" content="https://i.ibb.co/4nDnvPR0/1.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://ibb.co/dw3wCG4H" />
+    <meta name="twitter:image" content="https://i.ibb.co/4nDnvPR0/1.png" />
   </head>
 
   <body>
